--- a/css/giatrinoisuy_style.css
+++ b/css/giatrinoisuy_style.css
@@ -1,6 +1,6 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f4f4f4;
     display: flex;
     justify-content: center;
