- update qq gì đó, mệt quá

--- a/css/bandoso.css
+++ b/css/bandoso.css
@@ -322,3 +322,12 @@ footer {
     margin-top: 16px !important;
   }
 } 
+
+.leaflet-container :focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+.leaflet-interactive:focus {
+  outline: none !important;
+  box-shadow: none !important;
+} 
